K1J-551: Updated package structure to avoid creating unnecessary beans, minimize need for profile annotations and to avoid some code duplication